--- a/public/templates/map_pane.html
+++ b/public/templates/map_pane.html
@@ -1,5 +1,9 @@
 <div class='map-pane'>
-  <div google-map center='mapModels.options.center' zoom='mapModels.options.zoom' events='mapModels.events'>
+  <div>
+    <span>Latitude: {{ mapModels.options.center.latitude }}</span>
+    <span>Longitude: {{ mapModels.options.center.longitude }}</span>
+  </div>
+  <div google-map center='mapModels.options.center' zoom='mapModels.options.zoom' events='mapModels.events' draggable='true'>
     <marker ng-repeat='marker in mapModels.markers' coords='marker'></marker>
   </div>
 </div>
