--- a/public/templates/nav_pane.html
+++ b/public/templates/nav_pane.html
@@ -21,6 +21,7 @@
 
       <div>{{ parking.address }}</div>
       <div>{{ parking.location }}</div>
+      <div class='parking-distance'>{{ parking.distance | number:2 }} mi</div>
     </div>
   </div>
 
